|KS| able to search,add songs and play them

--- a/app/assets/templates/songs/result.hbs.erb
+++ b/app/assets/templates/songs/result.hbs.erb
@@ -1,2 +1,8 @@
-<% title = "{{title}}" %>
-<div class="song"><p class="col-lg-11" id="song"><%= title.to_s.strip.capitalize %></p><i id="add-icon" class="col-lg-1 fa fa-plus fa-2x"></i></div>
+		<!-- <p id="add-icon"><i class="col-lg-1 fa fa-plus fa-4x"></i></p> -->	
+		<img src="{{thumbnails.1.url}}" class="resize col-xs-11" id="image" >
+		<div class="col-xs-12 title" id="song">
+			{{title}}
+		</div>
+		
+
+		
