--- a/app/assets/templates/songs/song.hbs.erb
+++ b/app/assets/templates/songs/song.hbs.erb
@@ -1,2 +1,9 @@
 <% name = "{{name}}" %>
-<div class="playlist-song"><p class="col-lg-10" id="song"><%= name.to_s.strip.capitalize %></p><i id="play-icon" class="col-lg-1 fa fa-play fa-2x"></i><i id="cross-icon" class="col-lg-1 fa fa-times fa-2x"></i></div>
+<div class="playlist-song">
+	<i id="play-icon" class=" col-lg-1 fa fa-play  "></i
+	>
+	<p  class="songs col-lg-8">
+	<%= name.to_s.strip.capitalize %>
+	</p>
+	<i id="cross-icon" class="pull-right col-lg-1 fa fa-times col-lg-offset-1 "></i>
+</div>
