--- a/app/assets/templates/songs/songs_search.hbs
+++ b/app/assets/templates/songs/songs_search.hbs
@@ -1,10 +1,8 @@
 <form action="api/songs/search" method="get">
-	<input id="search" type="text" name="q" class="col-lg-4 col-lg-offset-3" placeholder="Search for any Song">
-	<div class="col-lg-1 text-center" id="icon-bg">
-		<i id="search-icon"  class="fa fa-search fa-2x"></i>
-	</div>
+	<input id="search" type="text" name="q" class="col-lg-3 col-lg-offset-4" placeholder="Search for any Song">
+	<button type="submit" class="col-lg-1 text-center" id="icon-bg">
+	    <i id="search-icon"  class="fa fa-search fa-2x"></i>
+    </button>
 </form>
-</br>
-</br>
 </br>
 </br>
