--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -2,33 +2,53 @@
 .top10 {margin-top: 10px;}
 .top20 {margin-top: 20px;}
 
+
 .song{
-	margin-top: 5%;
 	color: white;	
-	padding-top: 5%;
-	padding-bottom: 7%;
-	border-bottom : #ec7063 solid 1px;
+	padding-top: 3%;
+	padding-bottom: 3%;	
+	min-height : 370px;
+	/*border-bottom : #ec7063 solid 3px;*/
 }
 
-/*.song {
-	margin-top: 5%;
-	color: white;	
-	padding-top: 5%;
-	padding-bottom: 7%;
-	border-bottom : #ec7063 solid 1px;	
-}*/
+
+.title{
+	margin-left : 4rem;
+	width : 270px;
+	line-height : 2.5rem;
+	margin-top :1rem;
+	overflow : hidden;
+	text-transform: capitalize;
+}
 
 .playlist-song{
-	margin-top: 5%;
+  font-size : 0.7em;
+	margin-top: 3%;
 	color: white;	
-	padding-top: 5%;
-	padding-bottom: 7%;
-	border-bottom : #48c9b0 solid 1px;
+	padding-top: 4%;
+	padding-bottom: 6%;
+	border-bottom : #48c9b0 solid 3px;
+}
+.songs{
+  white-space:nowrap;
+  max-width : 100%;
+  overflow :hidden;
+  text-overflow : ellipsis;
+  display: block;
+}
+
+.resize{
+	position:relative;
+	margin-left : 5.5rem;
+	border-top : #ec7063 solid 7px;
+	border-bottom : #ec7063 solid 7px;
+	height : 200px;
+	width : 250px;
 }
 
 
 #search {
-	font-size : 150%;
+	font-size : 120%;
 	border : black;
 	border-bottom: #48c9b0 solid 5px ;
 	padding-top : 1%;
@@ -37,14 +57,7 @@
 }
 
 #search-icon{
-	margin-top : 20%;
-	padding-top : 2%;
-	padding-bottom : 1%;
 	color : white;
-}
-
-.icon-hover{
-	color: #48c9b0;
 }
 
 .playlist-icon-hover{
@@ -53,11 +66,152 @@
 
 #icon-bg{
 	background : #ec7063;
-	height : 5.8rem;
+	height : 5.1rem;
+	border : #48c9b0;
 	border-bottom : #48c9b0 solid 5px ;
+}
 
+#add-icon{
+	color :#ec7063;
+	position:absolute;
+	/*text-align : center;*/
+	top : 11rem;
+    left : 15.8rem;	
+      z-index : 10;
+}
+
+.icon-hover{
+	color: #48c9b0 !important;
+	position:absolute;
+	/*text-align : center;*/
+	top : 11rem;
+  left : 16rem;
+
+}
+.hide-icon{
+	display : none !important;
+}
+
+#play-icon{
+  margin-bottom : 1rem !important;
+  margin-left : 1.5rem;
+  font-size : 1.5rem;
+}
+
+#cross-icon{
+  margin-left: 1%;
+  margin-right : 4%;
 }
 
 ul{
-list-style-type: none;
+	list-style-type: none;
+	display : inline;
 }
+
+::-webkit-scrollbar {
+      width: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+      border-radius: 5px;
+      display  : none;
+} /* the new scrollbar will have a flat appearance with the set background color */
+ 
+::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+      background-color: #888888;
+} /* this will style the thumb, ignoring the track */
+ 
+::-webkit-scrollbar-button {
+      display: none;
+      background-color: #48c9b0;
+} /* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
+ 
+::-webkit-scrollbar-corner {
+      background-color: black;
+} 
+
+
+
+
+/*###############################################################*/
+
+a.nav-expander {
+  background: none repeat scroll 0 0 #000000;
+  color: #FFFFFF;
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  height: 50px;
+  margin-right: 0;
+  padding: 1em 1.6em 2em;
+  position: absolute;
+  right: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+  top: 0;
+  transition: right 0.3s ease-in-out 0s;
+  width: 130px;
+  z-index: 12;
+
+  transition: right 0.3s ease-in-out 0s;
+  -webkit-transition: right 0.3s ease-in-out 0s;
+  -moz-transition: right 0.3s ease-in-out 0s;
+  -o-transition: right 0.3s ease-in-out 0s;
+
+}
+
+a.nav-expander:hover {
+  cursor: pointer;
+}
+
+a.nav-expander.fixed {
+  position: fixed;
+}
+
+.nav-expanded a.nav-expander.fixed {
+    right: 21em;
+}
+
+nav {
+  border-left: solid #58d68d 3px;
+  background: #060606;
+  display: block;
+  height: 100%;
+  overflow-x: hidden ;
+  position: fixed;
+  right: -21em;
+  font-size: 15px;
+  top: 0;
+  width: 21em;
+  z-index: 2000;
+
+  transition: right 0.3s ease-in-out 0s;
+  -webkit-transition: right 0.3s ease-in-out 0s;
+  -moz-transition: right 0.3s ease-in-out 0s;
+  -o-transition: right 0.3s ease-in-out 0s;
+
+}
+.nav-expanded nav {
+  right: 0;
+}
+
+body.nav-expanded {
+  right : -21em;
+  margin-left: 0em;
+  transition: right 0.4s ease-in-out 0s;
+  -webkit-transition: right 0.4s ease-in-out 0s;
+  -moz-transition: right 0.4s ease-in-out 0s;
+  -o-transition: right 0.4s ease-in-out 0s;
+}
+
+#nav-close {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  padding-right: 10px;
+}
+
+
+
