--- a/app/assets/templates/songs/player.hbs
+++ b/app/assets/templates/songs/player.hbs
@@ -1,3 +1,3 @@
 <iframe id="player" type="text/html" width="1000" height="480"
-  src="http://www.youtube.com/embed/{{video_id}}?enablejsapi=1&origin=http://enque.herokuapp.com/home&autoplay=1" frameborder="0">
+  src="http://www.youtube.com/v/{{video_id}}?enablejsapi=1&origin=http://enque.herokuapp.com/home&autoplay=1&playerapiid=player" frameborder="0">
   </iframe>
