--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,19 @@
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+
   </head>
   <body style="">
+     <nav>
+      <div>
+        <div class="row">
+          <h3 class="text-center">Playlist</h3>
+          <div id="playlist"  data-id="<%= @playlist.id %>">
+
+          </div>
+        </div>
+     </nav>
+
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -59,19 +70,33 @@
               </ul>
             </li>
           </ul>
+          <% unless current_user %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Login", new_user_session_path %></li>
+              <li><%= link_to "Sign Up!", new_user_registration_path %></li>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Welcome #{current_user.username} !", edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          <% end %>
 
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" target="_blank">Login</a></li>
-            <li><a href="#" target="_blank">Sign up !</a></li>
-          </ul>
+          <div class="navbar-header pull-right">
+           <a id="nav-expander" class="nav-expander fixed"><i class="fa fa-bars fa-lg white"></i>
+             List &nbsp;
+           </a>
+         </div>
 
         </div>
       </div>
     </div>
-    </br></br></br></br></br></br></br>
+    </br></br></br></br>
     <div class="container">
+    <div class="row">
+      <%= yield %>   
+    </div>
 
-    <%= yield %>     
 
     <footer>
      
