--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,15 +22,22 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand">Enque</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+          <% unless current_user %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to "Login", new_user_session_path %></li>
+              <li><%= link_to "Sign Up!", new_user_registration_path %></li>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to "Welcome #{current_user.username} !", edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          <% end %>
+
+          <a href="../" class="navbar-brand" id="logo" ><i class="fa fa-list-ul fa-2x">nque</i></a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
+          <!-- <ul class="nav navbar-nav">
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Themes <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
@@ -69,19 +76,8 @@
                 <li><a href="./bootswatch.less">bootswatch.less</a></li>
               </ul>
             </li>
-          </ul>
-          <% unless current_user %>
-            <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Login", new_user_session_path %></li>
-              <li><%= link_to "Sign Up!", new_user_registration_path %></li>
-            </ul>
-          <% else %>
-            <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Welcome #{current_user.username} !", edit_user_registration_path %></li>
-              <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-            </ul>
-          <% end %>
-
+          </ul> -->
+        
           <div class="navbar-header pull-right">
            <a id="nav-expander" class="nav-expander fixed"><i class="fa fa-bars fa-lg white"></i>
              List &nbsp;
